[package]
name = "io-tether"
version = "0.1.0"
authors = ["Caleb Leinz <cmleinz@pm.me>"]
edition = "2021"
description = "Traits for defining I/O objects which automatically reconnect upon failure."
license = "MIT"
repository = "https://github.com/cmleinz/io-tether"
readme = "README.md"
keywords = ["io", "tokio"]
publish = true

[dependencies]
tokio = { version = "1.38.0" }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full", "macros"] }

[features]
default = ["tcp"]

tcp = ["tokio/net"]
