[package]
name = "io-tether"
version = "0.1.3"
authors = ["Caleb Leinz <cmleinz@pm.me>"]
edition = "2021"
description = "Traits for defining I/O objects which automatically reconnect upon failure."
license = "MIT"
repository = "https://github.com/cmleinz/io-tether"
readme = "README.md"
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "tokio"]
rust-version = "1.75"
publish = true

[dependencies]
tokio = { version = "1" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }

[features]
default = ["net"]

net = ["tokio/net"]
