[package]
name = "io-tether"
version = "0.5.0"
authors = ["Caleb Leinz <cmleinz@pm.me>"]
edition = "2024"
description = "A small library for defining I/O types which reconnect on errors. "
license = "MIT"
repository = "https://github.com/cmleinz/io-tether"
readme = "README.md"
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "tokio"]
rust-version = "1.85"
publish = true

[dependencies]
tokio = { version = "1" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
tokio-test = { version = "0.4.4" }

[features]
default = ["net"]

net = ["tokio/net"]
fs = ["tokio/fs"]
